<resources>
    <string name="app_name">타임로그</string>
    <string name="timer">타이머</string>
    <string name="history">기록</string>
    <string name="monitoring">모니터링</string>
    <string name="settings">설정</string>

    <!--action-->
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="finish">종료</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>

    <!--dialog-->
    <string name="timer_reset_title">타이머 초기화</string>
    <string name="timer_reset_message">확인을 누르면 타이머가 초기화됩니다.</string>
    <string name="delete_record_complete">삭제되었습니다.</string>
    <string name="delete_record_title">기록 삭제</string>
    <string name="delete_record_message">정말 해당 기록을 삭제하시겠습니까?</string>
    <string name="timer_notification_message">알림 권한이 없으면 알림을 받을 수 없습니다.</string>
    <string name="timer_notification_permission">권한 허용하기</string>

    <string name="information_permission">"알림 권한이 거부되었습니다.\n\n알림 권한이 거부되었을 경우 기능이 제대로 작동하지 않을 수 있습니다.\n\n[설정 > 애플리케이션 > 타임로그]에서 알림 권한을 허용해주세요."</string>

    <!-- timer notification-->
    <string name="timer_notification_title">타이머</string>
    <string name="timer_notification_content">%02d:%02d:%02d</string>

    <!-- recordInfoDialogFragment-->
    <string name="choice_type">항목을 선택해주세요.</string>
    <string name="back_title">뒤로가기</string>
    <string name="back_message">확인을 클릭하면 기록이 저장되지 않은 채 뒤로 가집니다.</string>
    <string name="no_list">목록이 없습니다.</string>
    <string name="type_edit_text_toast">항목 이름은 한 글자 이상입니다.</string>
    <string name="type_add_toast">이미 생성된 항목입니다.</string>
    <string name="input_type_name">항목 이름을 입력하세요.</string>
    <string name="no_search_result">검색 결과가 없습니다.</string>
    <string name="duration">소요시간</string>
    <string name="break_time">휴식시간</string>
    <string name="memo">메모</string>
    <string name="write_memo">메모를 입력해주세요.</string>
    <string name="no_memo">저장된 메모가 없습니다.</string>
    <string name="save_memo">기록이 저장되었습니다.</string>

    <!-- monitoringFragment-->
    <string name="today_record">오늘의 기록</string>
    <string name="item_record">항목 기록</string>
    <string name="no_time">없음</string>
    <string name="month_day">시간/날짜</string>

    <!-- Calendar day of week -->
    <string name="calendar_monday">Mon</string>
    <string name="calendar_tuesday">Tue</string>
    <string name="calendar_wednesday">Wed</string>
    <string name="calendar_thursday">Thu</string>
    <string name="calendar_friday">Fri</string>
    <string name="calendar_saturday">Sat</string>
    <string name="calendar_sunday">Sun</string>

    <!-- SettingsFragment -->
    <string name="app_settings">앱 설정</string>
    <string name="language">언어</string>
    <string name="theme">테마</string>
    <string name="item_settings">항목 설정</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>

    <string name="app_information">앱 정보</string>
    <string name="app_version">현재 앱 버전</string>

    <string name="ask">문의하기</string>




    <string name="email_email">gndld4342@gmail.com</string>
    <string name="email_title">[시간 기록자] 문의</string>
    <string name="email_content">문의 내용을 입력해주세요.</string>
</resources>