<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/background_settings"
        android:padding="5dp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_gravity="bottom"
            android:text="@string/item_settings" />


        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/typeTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/app_version" />

        <TextView
            android:id="@+id/currentVersionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="@id/versionTextView"
            app:layout_constraintBottom_toBottomOf="@id/versionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/askTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/versionTextView"
            android:layout_gravity="bottom"
            android:text="@string/ask" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>