<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isEdit"
            type="Boolean" />

        <variable
            name="type"
            type="com.crystal.timeisgold.custom.DialogType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/backButton"
            style="@style/InterfaceButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/saveButton" />

        <ImageButton
            android:id="@+id/editButton"
            style="@style/InterfaceButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:editImage="@{isEdit}"
            app:layout_constraintBottom_toBottomOf="@id/saveButton"
            app:layout_constraintEnd_toStartOf="@id/saveButton"
            app:layout_constraintTop_toTopOf="@id/saveButton"
            app:visible="@{type}" />

        <ImageButton
            android:id="@+id/saveButton"
            style="@style/InterfaceButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="@id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/saveButton" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/typeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_left_padding"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/layout_right_padding"
            android:background="@drawable/background_title_button"
            android:elevation="10dp"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/choice_type"
            android:textColor="@color/basic_opposite_color"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saveButton" />

        <TextView
            android:id="@+id/startDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_left_padding"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/layout_right_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeButton" />

        <View
            android:id="@+id/timelineView"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_timeline"
            app:layout_constraintBottom_toTopOf="@id/endDateText"
            app:layout_constraintStart_toStartOf="@id/startDateText"
            app:layout_constraintTop_toBottomOf="@id/startDateText" />


        <TextView
            android:id="@+id/endDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_left_padding"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/layout_right_padding"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/layout_left_padding"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/layout_right_padding"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_record_info"
            android:elevation="5dp"
            android:padding="@dimen/layout_left_padding"
            app:layout_constraintBottom_toBottomOf="@id/timelineView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/timelineView"
            app:layout_constraintTop_toTopOf="@id/timelineView">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/durationText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text1"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/durationText" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/memo"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <EditText
                android:id="@+id/memoEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:backgroundTint="@android:color/transparent"
                android:gravity="top"
                app:editStatus="@{isEdit}"
                android:hint="@string/write_memo"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text2" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>